force-app/main/default/objects/Product_Matching__c/Product_Matching__c.object-meta.xml
<CustomObject>
    <description>The custom table to map productIds with Fokus product code that need to be mapped to dummy products on SF when Datamall integration fetches them</description>
    <label>Product Matching</label>
    <nameField>
        <label>Product Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Matchings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>