force-app/main/default/objects/Product_Matching__c/fields/ProductAPI_Telia_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>ProductAPI_Telia_Product_Id__c</fullName>
    <label>ProductAPI_Telia_Product_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>