force-app/main/default/objects/Product_Matching__c/listViews/All_Matchings.listView-meta.xml
<ListView>
    <fullName>All_Matchings</fullName>
    <columns>ProductAPI_Telia_Product_Id__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Matchings</label>
</ListView>